@@ -180,7 +180,8 @@ in direction TC_DIR_POSITIVE or TC_DIR_NEGATIVE with a fixed rate from 1 to 9
 that matches the rates of the hand control. To stop the slew the rate should be 
 set to 0. Note that TC_AXIS_RA and TC_AXIS_AZM are different names for the same axis
 and can be used interchangeably. The same applies to TC_AXIS_DE and TC_AXIS_ALT.
-On success 0 is returned, on error -1.
+On success 0 is returned, on error -1. If any of the parameters are out of range -2
+is returned.
 .TP
 .B int tc_slew_variable(int dev, char axis, char direction, float rate);
 Start/stop slew like tc_slew_fixed(). The only difference is that the rate
@@ -196,6 +197,34 @@ if it is shorter than
 The function returns
 .B *name
 if the mount is known or NULL in case it is not known.
+
+.SS UNDOCUMENTED COMMANDS
+The following commands are not officially documented by Celestron.
+.TP
+.B int tc_get_guide_rate();
+Unimplemented.
+.TP
+.B int tc_set_guide_rate_fixed();
+Unimplemented.
+.TP
+.B int tc_set_guide_rate();
+Unimplemented.
+.TP
+.B int tc_get_autoguide_rate(int dev, char axis);
+(TBD)
+.B NOTE: This command is reverse engineered.
+.TP
+.B int tc_set_autoguide_rate(int dev, char axis, char rate);
+(TBD)
+.B NOTE: This command is reverse engineered.
+.TP
+.B int tc_get_backlash(int dev, char axis, char direction);
+(TBD)
+.B NOTE: This command is reverse engineered.
+.TP
+.B int tc_set_backlash(int dev, char axis, char direction, char backlash);
+(TBD)
+.B NOTE: This command is reverse engineered.
 
 .SS COORDINATE CONVERSION
 .TP
@@ -292,6 +321,9 @@ deg2str(8)
 For more information about the NexStar commands please refer to the original
 protocol specification described here:
 http://www.celestron.com/c3/images/files/downloads/1154108406_nexstarcommprot.pdf
+
+The undocumented commands are described here:
+http://www.paquettefamily.ca/nexstar/NexStar_AUX_Commands_10.pdf
 
 .SH AUTHORS
 Created by Rumen G.Bogdanovski <rumen@skyarchive.org>
